v1.1.0/modules/schema/pages/class/CostRate.adoc
= `CostRate`
:toclevels: 4


+++Cost, in units of currency, per elapsed time.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:CostRate`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/Currency.adoc[`Currency`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostRate.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostRate.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/Currency.adoc[`Currency`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostRate.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/CULaborItem.adoc[`CULaborItem`] | xref::class/CULaborItem.adoc#laborRate[`laborRate`]



| xref::class/CUWorkEquipmentItem.adoc[`CUWorkEquipmentItem`] | xref::class/CUWorkEquipmentItem.adoc#rate[`rate`]



| xref::class/DefaultBid.adoc[`DefaultBid`] | xref::class/DefaultBid.adoc#minLoadCost[`minLoadCost`]



| xref::class/LaborItem.adoc[`LaborItem`] | xref::class/LaborItem.adoc#laborRate[`laborRate`]



| xref::class/RegisteredGenerator.adoc[`RegisteredGenerator`] | xref::class/RegisteredGenerator.adoc#pumpingCost[`pumpingCost`]



| xref::class/StartupModel.adoc[`StartupModel`] | xref::class/StartupModel.adoc#fixedMaintCost[`fixedMaintCost`]


|===

